20040227 event.c,ui.[ch]: don't display an error message if the same
	 message was displayed within the past second (fixes bug #901023).
20040301 trdos.c: make the TR-DOS read/write functions be no-ops if the
	 TR-DOS ROM is not active (part of patch #874504 from Stuart
	 Brady, but a separate bugfix IMO).
20040301 machine.c,scorpion.[ch],settings-header.pl,settings.{dat,pl},
	 snapshot.c,spec128.c,spectrum.[ch],tape.c,roms/256s-?.rom,
	 z80/z80_ops.c: Scorpion support (rest of patch #874504) (Stuart
	 Brady).
20040301 configure.in: make GTK+ 2.x the default user interface.
20040301 ui/gtk/{gtkinternals.h,gtkui.c,roms.c}: split the ROMs selection
	 dialog into one dialog for each machine.
20040302 ui/gtk/gtkui.c,widget/{menu.c,menu_data.c,roms.c,widget_internals.h}:
	 split the ROMs selection dialog into one dialog for each machine.
20040303 Another change to the peripheral handling code to let each 'read'
	 function determine whether it had a peripheral attached.
20040303 scorpion.c: no need to zero memory in reset function (Stuart
	 Brady).
20040303 lib/tape_scorpion.z80: add Scorpion tape auto-load snapshot
	 (Stuart Brady).
20040305 tc2068.c: make code C89 compatible.
20040309 pokefinder/pokefinder.[ch],ui/gtk/pokefinder.c: extend the
	 pokefinder to be able to find bytes which have increased or
	 decreased since the last check.
20040310 Move the low-level sound files into the new sound/ directory.
20040310 fuse.c,sound.c,spectrum.c,timer.c,sound/: move the sound code
	 detection logic into the new sound/lowlevel.h.
20040310 configure.in,sound/{Makefile.am,hpsound.c,lowlevel.h}: add HP-UX
         sound support (patch #911651) (Stuart Brady).
20040311 Makefile.am,input.[ch],keyboard.[ch],keysyms.{dat,pl},ui/ui.h,
	 ui/gtk/gtkkeyboard.c: first changes to introduce a generalised
	 input layer.
20040311 input.[ch],keysyms.dat,ui/options.dat,ui/sdl/sdlkeyboard.c,widget/:
	 widgets and SDL UI working with the new input layer code.